[1.21.3] Fix laser blade rendering