@@ -2,7 +2,6 @@ package com.github.iunius118.tolaserblade.client.model.laserblade.v1;
 
 import com.google.gson.annotations.SerializedName;
 
-import java.util.Collections;
 import java.util.List;
 
 public class JsonModelV1 {
@@ -12,11 +11,11 @@ public class JsonModelV1 {
     public int rendererID = 0;
     @SerializedName("gui_resize")
     public float[] guiResize = null;
-    public List<JsonModelObject> objects = Collections.emptyList();
-    public List<int[]> faces = Collections.emptyList();
-    public List<float[]> vertices = Collections.emptyList();
-    public List<float[]> normals = Collections.emptyList();
-    public List<float[]> colors = Collections.emptyList();
+    public List<JsonModelObject> objects = List.of();
+    public List<int[]> faces = List.of();
+    public List<float[]> vertices = List.of();
+    public List<float[]> normals = List.of();
+    public List<float[]> colors = List.of();
 
     public static class JsonModelObject {
         public Type type = Type.DEFAULT;
